deploy/sm.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: sm
  labels:
    app: sm
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: sm
        tier: web
    spec:
      containers:
        - name: jetti
          image: eu.gcr.io/jetti-pg/jetti
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: sm
  labels:
    app: sm
spec:
  type: NodePort
  sessionAffinity: ClientIP
  selector:
    app: sm
  ports:
  - port: 8080
    targetPort: 8080
