deploy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    app: ingress
spec:
  tls:
    - hosts:
      - bcg.jetti-app.com  
      - cl.jetti-app.com  
      secretName: jetti-ssl
  rules:
    - host: bcg.jetti-app.com
      http:
        paths:
        - path: /
          backend:
            serviceName: bcg
            servicePort: 8080
    - host: cl.jetti-app.com
      http:
        paths:
        - path: /
          backend:
            serviceName: jetti
            servicePort: 8080
